# TinyUSBExample

./: .gitmodules  .mxproject  CMakeLists.txt  TinyUSB.ioc
Core/Inc/: stm32u5xx_hal_conf.h  stm32u5xx_it.h
Core/Src/: app_freertos.c  main.c  stm32u5xx_hal_msp.c  stm32u5xx_it.c
USB/: CMakeLists.txt  msc_disk.c  tusb_config.h  usb_descriptors.c
cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
cmake/stm32cubemx/: CMakeLists.txt
